<?xml version="1.0" encoding="utf-8" standalone="no"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/grey_F2F2F2"
    android:layout_height="match_parent"
    android:layout_width="match_parent"

    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:background="@color/white">

        <ImageButton
            android:id="@+id/backArrow18"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="7dp"
            android:layout_weight="0"
            android:background="@drawable/arrow_left_circle"
            android:backgroundTint="@color/darkgray"
            android:onClick="onClickBackArrow" />

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="7dp"
            android:layout_marginRight="7dp"
            android:layout_marginBottom="2dp"
            android:text="@string/yo"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"></FrameLayout>

        <TextView
            android:id="@+id/chat_dst_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="7dp"
            android:layout_marginRight="7dp"
            android:layout_marginBottom="2dp"
            android:text="@string/destino"
            android:textColor="@color/black"
            android:textSize="20dp" />
    </LinearLayout>

    <ListView
        android:id="@+id/chat_messages_list_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7.95"
        android:background="@color/activity_background_2"
        android:divider="@null"
        android:listSelector="@android:color/transparent"
        android:transcriptMode="alwaysScroll"></ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <EditText
            android:id="@+id/chat_message_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="7dp"
            android:layout_weight="1.43"
            android:width="12dp"
            android:ems="10"
            android:hint="@string/tu_mensaje"
            android:inputType="textLongMessage|textMultiLine|textCapSentences"
            android:maxWidth="12dp">

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/chat_send_button"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="7dp"
            android:background="@drawable/button_blue_small"
            android:text="Enviar"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>
